--- a/testing/.gitignore
+++ b/testing/.gitignore
@@ -21,7 +21,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.txt
 
 # Runtime data
 pids
@@ -96,18 +95,5 @@ solar*.json
 /package-lock.json
 
 #non-commit integration testing files
-/openzeppelin/test
-/openzeppelin/contracts
-/openzeppelin/node_modules
-/aave/test
-/aave/contracts
-/aave/node_modules
-/aave/artifacts
-/aave/cache
-/aave/helpers
-/aave/markets
-/aave/modules
-/aave/node_modules
-/aave/specs
-/aave/tasks
-/aave/types
+/test
+/contracts
